[2단계 - 블랙잭 베팅] 프린(남기범) 미션 제출합니다. (#754)
* refactor: 셔플 전략 카드덱 팩토리로 이동, 클래스명 변경

* refactor: 카드덱 디렉토리 이동

* feat: 카드패 상태 (hit, stay, blackjack, bust) 추가

* feat: 상태를 끝내는 기능 추가

* feat: 준비 상태 추가

* refactor: 종료 상태 추상화

* refactor: initial 상태 추상화 (cards 공통 필드)

* feat: 종료 상태, 수익 계산 기능 추가

* refactor: 시작 상태 추상화 (prepare, hit)

* refactor: score 클래스 제거

* refactor: 상수명 변경

* refactor: 카드 상태 클래스 제거

* feat: 배팅 금액 클래스 추가

* feat: 배팅 금액을 입력받는 긴으 추가

* feat: Names 클래스 추가, 플레이어에 배팅 금액 필드 추가

* refactor: 수익 결과를 계산하는 클래스 추가

* refactor: 필요없는 클래스 삭제

* feat: 반복해서 입력받는 기능 추가

* refactor: 클래스명 변경

* refactor: 테스트 명확하게 수정, 필요없는 클래스 제거

* refactor: name 디렉토리 이동

* refactor: betAmount 디렉토리 이동

* refactor: 상수, 메서드 분리

* refactor: static import 적용, fixture 필요한 부분에서만 사용하도록 리팩토링

* docs: 기능 목록 최종 수정

* refactor: 카드 셔플 전략 제거

* refactor: 개행, 메서드명 변경

* style: static import 제거

* refactor: 딜러와 플레이어를 하나의 리스트로 관리

* feat: input view에 validation 추가

* refactor: 중복 코드 NameValidator로 추출

* refactor: 플레이어 생성자 파라미터 변경

* refactor: 수익 BigDecimal 타입으로 변경